# text-summarizer-api

./: 404.html  README.md  compose.yml  index.html
.github/workflows/: ci-cd.yml  ci_cd.yml  deploy_docs.yml  dev.yml  prod.yml
project/: .dockerignore  Dockerfile  dev.Dockerfile  mkdocs.yml  pyproject.toml
project/app/: config.py  custom_rate_limiter.py  db.py  main.py  summarizer.py
project/app/api/: crud.py  custom_exceptions.py  ping.py  summaries.py
project/app/models/: pydantic.py  tortoise.py
project/db/: db.Dockerfile
project/docker/: db.Dockerfile  db.Dockerfile.dockerignore  dev.Dockerfile  dev.Dockerfile.dockerignore  prod.Dockerfile  prod.Dockerfile.dockerignore
project/docs/: index.md
project/migrations/models/: 0_20240914152745_init.py  1_20240917150128_add_summarization_method_sentence_count.py
project/scripts/: build_and_push_image_github.sh  build_and_push_prod_image_github.sh  build_prod_image.sh  build_prod_image_heroku.sh  deploy_heroku.sh  entrypoint.sh  platform_selection.sh  release.sh  run_black_isort.sh
project/tests/: conftest.py  test_ping.py  test_summaries.py  test_summaries_unit.py
search/: search_index.json
