[project]
name = "text-summarizer-api"
description = "An asynchronous text summarization API built with FastAPI"
dependencies = [
    "fastapi>=0.112.1",
    "uvicorn>=0.30.6",
    "pydantic-settings>=2.5.2",
    "asyncpg>=0.29.0",
    "tortoise-orm>=0.21.6",
    "aerich>=0.7.2",
    "gunicorn>=23.0.0",
]
requires-python = ">3.11"
readme = "README.md"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.2",
]
notebook = [
    "ipykernel>=6.29.5",
]
lint = [
    "flake8>=7.1.1",
    "black>=24.8.0",
    "isort>=5.13.2",
]

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.isort]
profile = "black"
py_version=311
src_paths = ["app", "tests"]
remove_redundant_aliases = true
