[project]
name = "text-summarizer-api"
description = "An asynchronous text summarization API built with FastAPI"
dependencies = [
    "fastapi>=0.112.1",
    "uvicorn>=0.30.6",
    "pydantic-settings>=2.5.2",
    "asyncpg>=0.29.0",
    "tortoise-orm>=0.21.6",
    "aerich>=0.7.2",
    "gunicorn>=23.0.0",
    "sumy>=0.11.0",
    "lxml-html-clean>=0.2.2",
    "numpy>=2.1.1",
    "setuptools>=75.0.0",
]
requires-python = ">3.11"
readme = "README.md"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.2",
]
notebook = [
    "ipykernel>=6.29.5",
]
lint = [
    "flake8>=7.1.1",
    "black>=24.8.0",
    "isort>=5.13.2",
    "mypy>=1.11.2",
]

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.isort]
profile = "black"
py_version=311
src_paths = ["app", "tests"]
remove_redundant_aliases = true

[tool.mypy]
python_version = 3.11
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_calls = true
exclude = [
    "tests",
    "migrations",
]

[[tool.mypy.overrides]]
module = "sumy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nltk.*"
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:fastapi.applications",
    "ignore::DeprecationWarning:tortoise.contrib.fastapi",
    "ignore::DeprecationWarning:httpx._content",
    "ignore::DeprecationWarning:app.main",
    "ignore::DeprecationWarning:breadability",
]
