[project]
name = "text-summarizer-api"
description = "An asynchronous text summarization API built with FastAPI"
dependencies = [
    "fastapi>=0.115.5", 
    "uvicorn>=0.32.1", 
    "pydantic-settings>=2.6.1", 
    "asyncpg>=0.30.0", 
    "tortoise-orm>=0.22.0", 
    "aerich>=0.7.2", 
    "gunicorn>=23.0.0", 
    "sumy>=0.11.0", 
    "lxml-html-clean>=0.4.1", 
    "numpy>=2.1.3", 
    "setuptools>=75.6.0", 
    "redis[hiredis]>=5.2.0", 
    "fastapi-limiter>=0.1.6"
]
requires-python = ">=3.11"
readme = "README.md"

[tool.pdm]
distribution = false

[dependency-groups]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.2",
]
notebook = [
    "ipykernel>=6.29.5",
]
lint-fmt = [
    "flake8>=7.1.1",
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
]
docs = [
    "mkdocs-material>=9.5.45",
    "mkdocs>=1.6.1",
]

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.isort]
profile = "black"
py_version=311
src_paths = ["app", "tests"]
remove_redundant_aliases = true

[tool.mypy]
python_version = 3.11
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_calls = true
exclude = [
    "tests",
    "migrations",
]

[[tool.mypy.overrides]]
module = "sumy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nltk.*"
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:fastapi.applications",
    "ignore::DeprecationWarning:tortoise.contrib.fastapi",
    "ignore::DeprecationWarning:httpx._content",
    "ignore::DeprecationWarning:app.main",
    "ignore::DeprecationWarning:breadability",
    "ignore::DeprecationWarning:fastapi_limiter",
]
